<resources>
    <string name="app_name">WordsHunter</string>
    <string name="set_service">Enable service</string>
    <string name="set_up">Set up</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="words">Words</string>
    <string name="home">Home</string>
    <string name="title_activity_words">WordsActivity</string>
    <string name="stats_by_words">By words</string>
    <string name="stats_by_groups">By groups</string>
    <string name="charts_label">Words caught for %1$s</string>
    <string name="stats_count_label_words_days">Words for %1$s</string>
    <string name="stats_count_label_words_weeks">Words for the week of %1$s</string>
    <string name="time">%1$d times</string>
    <string name="by_days">By days</string>
    <string name="by_weeks">By weeks</string>
    <string name="no_group">No group</string>
    <string name="week_from_monday">Week of %1$s</string>
    <string name="no_words_to_track_message">Nothing to track.</string>
    <string name="word_was_removed">Word \"%1$s\" was deleted.</string>
    <string name="group_was_removed">Group \"%1$s\" was deleted.</string>
    <string name="notification_service_disabled_title">Words are free:(</string>
    <string name="notification_service_disabled_text">Tracking service is disabled!</string>
    <string name="notification_service_disabled_action_enable">Enable</string>
    <string name="notification_service_disabled_action_stop_notifying">Disable notifications</string>
    <string name="empty_message_words_to_track">Empty!</string>
    <string name="accessibility_service_not_enabled_message">Tracking service is off:(\nYou can't pass here without it.</string>
    <string name="accessibility_service_not_enabled_button"><u><b>Enable</b></u></string>
    <string name="accessibility_service_description">It catches only the words which are added in a \"WordsHunter\" app. \"Catches\" here means that the service just counts the number of the occurrences for each tracked word per day. \n\nOnce again - none of your personal data is stored, it\'s only the digits(counts) for words you added that are stored. \n\nYour data remains secured.</string>
    <string name="no_words_to_track_snackbar_action_home_fragment">Add new word</string>
    <string name="enable_service_home_fragment">Enable</string>
    <string name="service_not_enabled_home_fragment">Tracking service is disabled!</string>
    <string name="word_will_be_tracked_words_fragment">"Word \"%1$s\" now will be tracked"</string>
    <string name="word_wont_be_tracked_words_fragment">"Word \"%1$s\" won't be tracked anymore"</string>
    <string name="floating_menu_add_word_words_fragment">Word</string>
    <string name="floating_menu_add_group_words_fragment">Group</string>
    <string name="input_word_error_message_regex">Spaces are not allowed. Max word\'s length - 20 symbols.</string>
    <string name="input_word_error_message_unique">This word is already on track!</string>
    <string name="input_word_hint">Word…</string>
    <string name="add_new_dialog_title">Add new…</string>
    <string name="add_new_dialog_list_item_word">Word</string>
    <string name="add_new_dialog_list_item_group">Group</string>
    <string name="add_new_word_dialog_title">Add new word</string>
    <string name="add_new_group_dialog_title">Add new group</string>
    <string name="input_group_hint">Group\'s name…</string>
    <string name="input_group_error_message">The group\'s name must be unique with a length of no more than 20 symbols.</string>
    <string name="input_group_error_message_unique">Group with this name already exists!</string>
    <string name="for_seven_days">For 7 days: %1$d</string>
    <string name="for_thirty_days">For 30 days: %1$d</string>
    <string name="words_caught">Caught %1$s words.\n</string>
    <string name="limits_reached">Exceeded %1$s limits..\n</string>
    <string name="most_used_word">The most popular word was %1$s,\u0020</string>
    <string name="nothing_caught">Nothing caught… good job:)</string>
    <string name="daily_report_title_notification">Yesterday\'s report</string>
    <string name="set_up_forgot"><u>No good?</u></string>
    <string name="intro_page1_desc">Thanks for the install!\nLet\'s meet now:)</string>
    <string name="set_up_tutorial_page2">Push the button \'Enable service\'.</string>
    <string name="set_up_tutorial_page3">In a higher list find and tap on \'WordsHunter\'</string>
    <string name="set_up_tutorial_page4">Push the button \'Accessibility\'</string>
    <string name="set_up_tutorial_page5">Push the button \'ОК\'</string>
    <string name="set_up_tutorial_step1">First step</string>
    <string name="set_up_tutorial_step2">Second step</string>
    <string name="set_up_tutorial_step3">Third step</string>
    <string name="set_up_tutorial_step4">Fourth step</string>
    <string name="stats_empty_message">Empty:(\n Get back shortly!</string>
    <string name="new_limit_hint">Limit… </string>
    <string name="word_limit_creation_decimal_error">Must be an integer(number) in a range of 0..1000</string>
    <string name="change_notificaiton">Change limiter</string>
    <string name="limit_exists_text">A limiter is already set. Want to change?</string>
    <string name="limit_delete">Remove</string>
    <string name="limit_finish">Save</string>
    <string name="new_limit_title">Word\'s limit per day</string>
    <string name="word_limit_notification_creation_description">If the usage of a tracked word in one day reaches or exceeds the limit - there will be a notification.</string>
    <string name="group_limit_notification_creation_description">If a sum of the usages of each word in a group reaches or exceeds the limit - there will be a notification.</string>
    <string name="limit_cancel">Cancel</string>
    <string name="limit_ok">OK</string>
    <string name="limit_exceeded_notif_title">Limit for "\"%1$s"\" is exceeded!</string>
    <string name="limit_exceeded_notif_description_word">This word is already caught %1$d times!:(</string>
    <string name="limit_exceeded_notif_description_group">"This group's words are already caught %1$d times!:(</string>
    <string name="intro_page2_desc">Add the words to track - WordsHunter can catch them anywhere!\nFacebook, SMS, WhatsUp - anywhere!</string>
    <string name="intro_page2_title">The ultimate catcher!</string>
    <string name="intro_page3_title">What to track?</string>
    <string name="intro_page3_desc">Filler words, swear words… \'like\', \'crap\' or the popular and essential \'I\'? \nIt\'s for you to decide!</string>
    <string name="intro_page4_title">Remove until sent!</string>
    <string name="intro_page4_desc">Set the limiters upon words - get notified instant you type them!</string>
    <string name="intro_page5_title">History keeper</string>
    <string name="intro_page5_desc">Through the history of usage of the tracked words learn much new about your text speech!</string>
    <string name="set_up_guide_description">It is time to enable the Accessibility service\nwhich will catch your words.</string>
    <string name="set_up_guide_title">Release the Kraken!</string>
    <string name="words_tutorial_title1">Track any words!</string>
    <string name="words_tutorial_content1">Push this button to add a new word.</string>
    <string name="words_tutorial_dismiss_next">NEXT</string>
    <string name="words_tutorial_title_2">Set up the notifications!</string>
    <string name="words_tutorial_content2">Set a limit on a word\'s usage - app will notify you when it is exceeded.</string>
    <string name="words_tutorial_title3">More features!</string>
    <string name="words_tutorial_content3">Tap on a word - a menu will appear. Tap \'n hold - drag a word to a different group!</string>
    <string name="words_tutorial_dismiss_finish">GOT IT</string>
    <string name="settings_daily_stats_checkbox_title">Daily reports</string>
    <string name="settings_daily_stats_checkbox_content">It indicates whether to send you the daily reports on the usage of the tracked words.</string>
    <string name="settings_disabled_checkbox_title">Tracking service is disabled</string>
    <string name="settings_disabled__checkbox_content">It indicates whether to notify you when the tracking service is disabled for some time (for example - OS had unexpectedly shut it down, so there is a need to handle a reboot).</string>
    <string name="words_tutorial_toast_cant_see_word">Please, scroll down the list so the words\'s cards would be visible.</string>
    <string name="age_hint">Age…</string>
    <string name="gender_female">female</string>
    <string name="gender_male">male</string>
    <string name="age_error">Age - only digits.</string>
    <string name="gender_error">Please, choose your gender!</string>
    <string name="personal_data_title">A participant\'s form</string>
    <string name="personal_data_description">Thanks you for the participation! ANONYMITY IS GUARANTEED.</string>
    <string name="age_long_length">It won\'t crash, nice try:)</string>
    <string name="cant_delete_word_toast_msg">This word is on the research!\nIt can\'t be deleted:(</string>
    <string name="cant_untrack_word_toast_msg">This word is on the research!\nIt can\'t be removed from tracking:(</string>
    <string name="cant_drag_word_toast_msg">This word is on the research!\nIt\'s group can\'t be changed:(</string>
    <string name="cant_delete_group_toast_msg">This group is on the research!\nIt can\'t be deleted:(</string>
    <string name="limit_toast_base">Limit for \"%1$s\" is\u0020</string>
    <string name="limit_toast_created">set!</string>
    <string name="limit_toast_changed">changed!</string>
    <string name="limit_toast_removed">removed!</string>
</resources>
